# todolist-app-fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 18ec6332b16a_user_tokens.py  7c6c551c8005_iniciando_banco.py  872c23663f4f_init_db.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/versions/: 37454118fce9_adding_todos_table.py  7783d5898c5c_iniciando_banco.py  a1a150dfd76f_todo_description_optional.py
backend/src/app/: exc.py  exc_handlers.py  main.py  schemas.py  scripts.py
backend/src/app/api/: __init__.py  admin.py  auth.py  todo.py  user.py
backend/src/app/core/: dependencies.py  limiter.py  security.py  settings.py
backend/src/app/models/: __init__.py  todo.py  token.py  user.py
backend/src/app/services/: api.py  auth.py  todo.py  token.py  user.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_dependencies.py  test_schemas.py  test_todo.py  test_tokens.py  test_user_model.py  test_users.py
frontend/: Dockerfile  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  todos.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/admin/: AdminLayout.tsx  AdminSidebar.tsx
frontend/src/components/layout/: AdminRoute.tsx  Header.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/todos/: TodoCard.tsx  TodoForm.tsx  TodoList.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: useAdmin.ts  useTheme.ts  useTodos.ts
frontend/src/lib/: date.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  TodoEdit.tsx  TodoNew.tsx
frontend/src/pages/admin/: Dashboard.tsx  Todos.tsx  Tokens.tsx  Users.tsx
frontend/src/providers/: AuthProvider.tsx  QueryProvider.tsx  ThemeProvider.tsx
frontend/src/types/: index.ts
src/app/: db.py  exc.py  main.py  schemas.py  scripts.py
src/app/api/: __init__.py  auth.py  user.py
src/app/core/: dependencies.py  security.py  settings.py
src/app/models/: __init__.py  token.py  user.py
src/app/schemas/: auth.py
src/app/services/: api.py  auth.py  user.py
tests/: conftest.py  test_db.py  test_security.py
