[project]
name = "todolist-app"
version = "0.0.1"
description = "project"
readme = "README.md"
license = "MIT"
authors = [{ name = "Miguel Costa", email = "miguelcosmecosta@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.136.3",
  "uvicorn[standard]>=0.48.0",
  "sqlalchemy>=2.0.49",
  "pydantic-settings>=2.14.1",
  "python-jose[cryptography]>=3.5.0",
  "pydantic[email]>=2.13.4",
  "python-multipart>=0.0.28",
  "alembic>=1.18.4",
  "passlib>=1.7.4",
  "argon2-cffi>=25.1.0",
  "rich>=15.0.0",
  "asyncpg>=0.31.0",
  "psycopg2-binary>=2.9.12",
  "slowapi>=0.1.9",
]
# ============================
# Project dependency groups
# ============================
[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-xdist",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "testcontainers[postgres]>=4.14.2",
]
# ============================
# Uv configuration
# ============================
[tool.uv]
exclude-newer = "7 days"
# ============================
# Lint and formatting (Ruff)
# ============================
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A004",   # Checks for imports that use the same names as builtins.
  "ARG001", # Checks for the presence of unused arguments in function definitions.
  "ARG002", # Checks for the presence of unused arguments in instance method definitions.
  "ANN401", # Checks that function arguments are annotated with a more specific type than Any.
  "COM812", # Checks for the absence of trailing commas.
  "D",      # All pydocstyle (D)
  "ERA001", # Checks for commented-out Python code.
  "INP001", # Checks for packages that are missing an __init__.py file.
  "S101",   # Checks for uses of the assert keyword.
  "T201",   # Checks for print statements,
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["app"]
# ============================
# Typing (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
  "**/.*",
  "**/venv",
  "**/.venv",
  "**/env",
  "**/.env",
  "**/node_modules",
  "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]
# ============================
# Tests (Pytest)
# ============================
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s -vv --color=yes --tb=short --cov=app --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning"
]
# ============================
# Tests (Coverage)
# ============================
[tool.coverage.run]
source = ["app"]
branch = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
omit = ["*/tests/*", "**/__init__.py", "*/utils/*", "**/scripts.py", "**/limiter.py"]
show_missing = true
fail_under=70
# ============================
# Build (Hatchling)
# ============================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
